--- a/src/common/Header/header.module.css
+++ b/src/common/Header/header.module.css
@@ -1,7 +1,7 @@
 .menu_item {
     font-family: var(--font-literata-regular);
     font-size: var(--button);
-    color: var(--foreground);
+    color: var(--text-color);
     letter-spacing: -5%;
     font-weight: 200;
     align-self: center;
@@ -11,7 +11,7 @@
 .menu_item_selected {
     font-family: var(--font-literata-regular);
     font-size: var(--button);
-    color: var(--foreground);
+    color: var(--text-color);
     letter-spacing: -5%;
     font-weight: 600;
     align-self: center;
